--- a/view/adminhtml/layout/hryvinskyi_csp_report_index.xml
+++ b/view/adminhtml/layout/hryvinskyi_csp_report_index.xml
@@ -9,6 +9,9 @@
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <css src="Hryvinskyi_Csp::css/styles.css"/>
+    </head>
     <body>
         <referenceBlock name="page.title">
             <block name="hryvinskyi.menu" template="Hryvinskyi_Csp::menu.phtml" />
