Add report group functionality and update related components
- Updated composer.json to version 1.1.0-alpha
- Introduced ReportGroup and related interfaces for managing report groups
- Enhanced Report and SaveFromCspReport interfaces to support group ID
- Added new adminhtml controllers for report group management
- Implemented data provider and collection for report groups
- Updated UI components and XML files for report group integration
- Added CSS styles for new admin menu structure
- Documented changes in CHANGELOG.md

--- a/view/adminhtml/layout/hryvinskyi_csp_reportgroup_index.xml
+++ b/view/adminhtml/layout/hryvinskyi_csp_reportgroup_index.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 /**
- * Copyright (c) 2025. Volodymyr Hryvinskyi. All rights reserved.
- * Author: Volodymyr Hryvinskyi <volodymyr@hryvinskyi.com>
- * GitHub: https://github.com/hryvinskyi
+ * Copyright (c) 2025. MageCloud.  All rights reserved.
+ * @author: Volodymyr Hryvinskyi <mailto:volodymyr@hryvinskyi.com>
  */
 -->
 
@@ -17,7 +16,7 @@
             <block name="hryvinskyi.menu" template="Hryvinskyi_Csp::menu.phtml" />
         </referenceBlock>
         <referenceContainer name="content">
-            <uiComponent name="hryvinskyi_csp_whitelist_form"/>
+            <uiComponent name="hryvinskyi_csp_reportgroup_listing"/>
         </referenceContainer>
     </body>
 </page>
