--- a/view/adminhtml/templates/menu.phtml
+++ b/view/adminhtml/templates/menu.phtml
@@ -17,14 +17,16 @@ $style = '.page-title-wrapper .page-title {
 
 echo $secureRenderer->renderTag('style', [], $style, false);
 ?>
-<div class="admin__action-dropdown-wrap mst-core-menu">
+<div class="admin__action-dropdown-wrap hryvinskyi-core-menu">
     <button
         type="button"
         class="admin__action-dropdown"
         data-mage-init='{"dropdown":{}}'
         data-toggle="dropdown"
         aria-haspopup="true">
-        <i class="fa fa-bars"></i>
+        <svg class="hamburger-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+            <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
+        </svg>
         <span class="admin__action-dropdown-text"><?= __('Content Security Policy'); ?></span>
     </button>
 
@@ -35,7 +37,7 @@ echo $secureRenderer->renderTag('style', [], $style, false);
             </a>
         </li>
         <li>
-            <a href="<?= $escaper->escapeUrl($block->getUrl('hryvinskyi_csp/report/index')) ?>">
+            <a href="<?= $escaper->escapeUrl($block->getUrl('hryvinskyi_csp/reportgroup/index')) ?>">
                 <?php echo $block->escapeHtml('Violation Report') ?>
             </a>
         </li>
