--- a/view/adminhtml/layout/hryvinskyi_csp_whitelist_new.xml
+++ b/view/adminhtml/layout/hryvinskyi_csp_whitelist_new.xml
@@ -9,5 +9,8 @@
 
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <css src="Hryvinskyi_Csp::css/styles.css"/>
+    </head>
     <update handle="hryvinskyi_csp_whitelist_edit"/>
 </page>
